--- a/views/rock.erb
+++ b/views/rock.erb
@@ -21,7 +21,7 @@
     <h1>We won!</h1>  
   <% end %>
     
-  <div><a href="/app/home">Rules</a></div>
-  
+  <div><a href="/">Rules</a></div>
+
 </body>
 </html>
