second final commit

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,9 +7,9 @@
   </head>
 
   <body>
-    <div><a href="/app/rock">Play Rock</a></div>
+    <!--  <div><a href="/app/rock">Play Rock</a></div>
     <div><a href="/app/paper">Play Paper</a></div>
-    <div><a href="/app/scissors">Play Scissors</a></div>
+    <div><a href="/app/scissors">Play Scissors</a></div>   -->
 
     <%= yield %>
 
