--- a/views/rock.erb
+++ b/views/rock.erb
@@ -7,7 +7,10 @@
 </head>
 
 <body>
-
+  <div><a href="/rock">Play Rock</a></div>
+  <div><a href="/paper">Play Paper</a></div>
+  <div><a href="/scissors">Play Scissors</a></div>
+  
   <h2>We played rock!</h2>
   
   <% if @computer_choice == 1 %>
